2011-02-07  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Add total model sampling.
	(handle_belief_state): Fix locking.

	* examples/run-streaming.sh: Add timelimit support, make run and
	timelimit optional.
	Time all daemons and client with time --verbose.
	* examples/run-opt.sh: Likewise.
	* examples/ring-3-10-5-5-a/run-streaming.sh: Likewise.
	* examples/ring-3-10-5-5-a/run-opt.sh: Likewise.

2011-02-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Add SIGINT signal handler and sampling of models.

	* examples/ring-3-10-5-5-a: New example.

	* include/dmcs/StreamingForwardMessage.h: Fix streaming
	asynchronous client.
	* include/network/AsynClient.tcc: Likewise.
	* include/network/AsynClient.h: Likewise.
	* include/network/BaseClient.h: Likewise.
	* src/dmcsc.cpp: Likewise.

	* src/dmcsc.cpp: Run io_service in its own thread in streaming mode.

	* testsuite/Makefile.am (testQueryPlan_LDADD): Add liblog.a.

2011-02-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Send NULL at leaf, when EOF.

	* src/dmcs/BeliefCombination.cpp: Add &.

	* include/solver/RelSatSolver.h: Add reset_slaves().

	* include/network/RouterThread.h: Fix memory leaks.
	* src/network/JoinThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.

	* include/network/NeighborOut.h: Add some comment.
	* include/solver/RelSatSolver.h: Likewise.

	* include/network/Handler.tcc: Remove case --k=0.
	* include/network/OutputThread.h: Likewise.
	* src/network/OutputThread.cpp: Likewise.

	* include/dmcs/OutputNotification.h: Add type GET_NEXT.

	* include/network/RouterThread.h: Fix warning.

	* include/dmcs/OutputNotification.h: Add parent_session_id.

	* src/network/JoinThread.cpp: Filter with parent_session_id.

	* src/solver/RelSatSolver.cpp: Send NULL pointer with
	parent_session_id.

	* include/network/OutputThread.h: Filter output models with parent_session_id.